feat: 晚上国际化以及项目说明

--- a/public/i18n/en_US.json
+++ b/public/i18n/en_US.json
@@ -2,5 +2,24 @@
   "importer": "Importer",
   "selectFile": "Select file",
   "cancel": "Cancel",
-  "startImport": "Start import"
+  "startImport": "Start import",
+  "importerLoaded": "Importer loaded",
+  "importerUnloaded": "Importer unloaded",
+  "msgFileNotEmpty": "File cannot be empty",
+  "msgConverting": "File conversion, please wait",
+  "msgFileUploadError": "The file upload failed, the error message is as follows",
+  "msgFileConvertError": "The file conversion failed, the error message is as follows",
+  "msgFileConvertEmpty": "File conversion failed with empty content",
+  "msgDocCreateFailed": "Document creation failed, please check the converted markdown file",
+  "msgDocAlreadyImported": "This document has already been imported, if the document has been deleted, you can ignore this prompt, the current document",
+  "msgTempFileCleaned": "Temp files cleaned up",
+  "msgImportSuccess": "file imported successfully",
+  "notebookConfigUpdated": "The notebook configuration has been updated",
+  "selected": "选中",
+  "targetNotebook": "Target notebook",
+  "selectNotebookTip": "Imported target notebook, selected",
+  "loading": "Loading",
+  "importFile": "Importing files",
+  "importTip": "Convert epub, docx and other formats into Markdown temporary files, and then create documents",
+  "supportedTypes": "Currently supported formats: .epub, .docx, .html, .opml"
 }
