--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -21,5 +21,10 @@
   "loading": "加载中",
   "importFile": "导入文件",
   "importTip": "将 epub, docx 等格式转换成Markdown临时文件，然后创建文档",
-  "supportedTypes": "目前支持的格式：.epub, .docx, .html, .opml"
+  "importFolder": "批量导入",
+  "importFolderTip": "将当前选择的文件夹下支持的文件批量导入",
+  "importNotRecursive": "不递归",
+  "importTipNotAllowed": "不允许的文件类型:",
+  "importError": "导入出错:",
+  "supportedTypes": "目前支持的格式：.md, .epub, .docx, .html, .opml"
 }
