fix: 新增校验，批量导入之前必须清除临时文件

--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -29,5 +29,6 @@
   "cleanTemp": "clean up temporary files",
   "clean": "Delete",
   "tempCount": "temporary files",
+  "tempCountExists": "Please clean up the temporary files before batch import",
   "supportedTypes": "Currently supported formats: .epub, .docx, .html, .opml"
 }
