fix: 优化移动端图标展示

--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -26,7 +26,8 @@
   "importNotRecursive": "Not recursive",
   "importTipNotAllowed": "File type is not allowed:",
   "importError": "Import error:",
-  "cleanTemp": "clean up temporary files",
+  "cleanTemp": "Clean up temporary files",
+  "tempTotal": "Total",
   "clean": "Delete",
   "tempCount": "temporary files",
   "tempCountExists": "Please clean up the temporary files before batch import",
