--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -26,7 +26,8 @@
   "importNotRecursive": "不递归",
   "importTipNotAllowed": "不允许的文件类型:",
   "importError": "导入出错:",
-  "cleanTemp": "清理临时文件，共",
+  "cleanTemp": "清理临时文件",
+  "tempTotal": "共",
   "clean": "删除",
   "tempCount": "个临时文件",
   "tempCountExists": "请先清理临时文件在进行批量导入",
