--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -20,7 +20,8 @@
   "selectNotebookTip": "Imported target notebook, selected",
   "loading": "Loading",
   "importFile": "Importing files",
-  "importTip": "Convert epub, docx and other formats into Markdown temporary files, and then create documents",
+  "importTip": "Support .md, .epub, .docx, .html, .opml",
+  "importSingleNotice": "Convert the document to a temporary Markdown file, then create the document",
   "importFolder": "Batch Import",
   "importFolderTip": "Batch import the supported files under the selected folder, and support mixed formats",
   "importNotRecursive": "Not recursive",
