--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -19,11 +19,12 @@
   "targetNotebook": "目标笔记本",
   "selectNotebookTip": "导入的目标笔记本，已选",
   "loading": "加载中",
-  "importFile": "导入文件",
-  "importTip": "将 epub, docx 等格式转换成Markdown临时文件，然后创建文档",
+  "importFile": "单个导入",
+  "importTip": "支持.md, .epub, .docx, .html, .opml",
+  "importSingleNotice": "将文档转换成Markdown临时文件，然后创建文档",
   "importFolder": "批量导入",
-  "importFolderTip": "将当前选择的文件夹下支持的文件批量导入",
-  "importNotRecursive": "不递归",
+  "importFolderTip": "支持混合.epub,.docx,.html,.opml",
+  "importNotRecursive": "不递归，不支持MD，批量导入MD请使用笔记本自带功能",
   "importTipNotAllowed": "不允许的文件类型:",
   "importError": "导入出错:",
   "cleanTemp": "清理临时文件",
