--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -21,6 +21,7 @@
   "loading": "Loading",
   "importFile": "Importing files",
   "importTip": "Support .md, .epub, .docx, .html, .opml",
+  "importTipHelp": "Move the mouse up to view the help details",
   "importSingleNotice": "Convert the document to a temporary Markdown file, then create the document",
   "importFolder": "Batch Import",
   "importFolderTip": "Batch import the supported files under the selected folder, and support mixed formats",
@@ -32,5 +33,7 @@
   "clean": "Delete",
   "tempCount": "temporary files",
   "tempCountExists": "Please clean up the temporary files before batch import",
-  "supportedTypes": "Currently supported formats: .epub, .docx, .html, .opml"
+  "reportBug1": "Encounter problems? , to the developer terwer ",
+  "reportBug2": "feedback",
+  "reportBug3": " bar~"
 }
