--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -21,10 +21,14 @@
   "loading": "加载中",
   "importFile": "单个导入",
   "importTip": "支持.md, .epub, .docx, .html, .opml",
-  "importSingleNotice": "将文档转换成Markdown临时文件，然后创建文档",
+  "importTipHelp": "鼠标移上来查看帮助详情",
+  "importSingleNotice1": "1、将文档转换成Markdown临时文件，然后创建文档",
+  "importSingleNotice2": "2、html资源文件夹(仅PC客户端)必须是 [文件名]_files",
   "importFolder": "批量导入",
   "importFolderTip": "支持混合.epub,.docx,.html,.opml",
-  "importNotRecursive": "不递归，不支持MD，批量导入MD请使用笔记本自带功能",
+  "importNotRecursive1": "1、不递归",
+  "importNotRecursive2": "2、不支持MD，批量导入MD请使用笔记本自带功能。",
+  "importNotRecursive3": "3、html资源文件夹(仅PC客户端)必须是 [文件名]_files",
   "importTipNotAllowed": "不允许的文件类型:",
   "importError": "导入出错:",
   "cleanTemp": "清理临时文件",
@@ -32,5 +36,7 @@
   "clean": "删除",
   "tempCount": "个临时文件",
   "tempCountExists": "请先清理临时文件在进行批量导入",
-  "supportedTypes": "目前支持的格式：.md, .epub, .docx, .html, .opml"
+  "reportBug1": "遇到问题? 发邮件到 youweics@163.com 或者 给开发者 terwer ",
+  "reportBug2": "反馈一下",
+  "reportBug3": " 吧~"
 }
