feat: 优化界面交互

--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -21,14 +21,15 @@
   "loading": "加载中",
   "importFile": "单个导入",
   "importTip": "支持.md, .epub, .docx, .html, .opml",
-  "importTipHelp": "鼠标移上来查看帮助详情",
-  "importSingleNotice1": "1、将文档转换成Markdown临时文件，然后创建文档",
-  "importSingleNotice2": "2、html资源文件夹(仅PC客户端)必须是 [文件名]_files",
+  "importTipHelp": "查看帮助",
+  "importSingleNotice1": "1、非MD文件会将文档转换成Markdown临时文件，然后创建文档",
+  "importSingleNotice2": "2、MD文档支持带资源文件，路径必须是相对路径",
+  "importSingleNotice3": "3、html支持资源文件夹(仅PC客户端)且必须是 [文件名]_files",
   "importFolder": "批量导入",
-  "importFolderTip": "支持混合.epub,.docx,.html,.opml",
+  "importFolderTip": "支持混合.epub,.docx,.opml",
   "importNotRecursive1": "1、不递归",
   "importNotRecursive2": "2、不支持MD，批量导入MD请使用笔记本自带功能。",
-  "importNotRecursive3": "3、html资源文件夹(仅PC客户端)必须是 [文件名]_files",
+  "importNotRecursive3": "3、不支持html，因为安全限制，浏览器现在无法获取绝对路径，可通过单个导入(支持资源文件)",
   "importTipNotAllowed": "不允许的文件类型:",
   "importError": "导入出错:",
   "cleanTemp": "清理临时文件",
