fix(importer): optimize styles and improve import settings
- Add scoped attribute to styles in ImportForm and ImportSetting components
- Organize styles in a more structured and modular way
- Adjust styles for better visual consistency
- Update import setting styles for improved user experience- Make minor adjustments to context menu and other related styles

--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -39,7 +39,7 @@
   "reportBug1": "遇到问题? 发邮件到 youweics@163.com 或者 给开发者 terwer ",
   "reportBug2": "反馈一下",
   "reportBug3": " 吧~",
-  "setting": "设置",
+  "setting": "导入设置",
   "cancel": "取消",
   "save": "保存",
   "bundledFnHandler": "插件自带的处理函数",
